passage content added

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <div id="card" class="w-[21%] flex flex-col items-center py-[4vw] px-[1.5vw] bg-white ">
                 <img id="icon" src="assets/service2.png" class="absolute -top-[20%] bg-white rounded-full w-[8vw] p-[1vw] border-[#2A1768] border-[3px] h-[8vw] object-cover">
                 <h3 class="text-[1.6vw] text-center font-bold mb-[1vw]">Plumbing and Drains</h3>
-                <p class="mb-[1vw] text-center">Our plumbers are ready to go 24/7 for emergencies - including nights, weekends and holidays.</p>
+                <p class="mb-[1vw] text-center">As the largest plumbing and drain service company, we make thousands of repairs every day.</p>
                 <h2 class="text-[#3F1273] text-[1.4vw] font-[Oswald] uppercase ">Explore this Service ></h2>
             </div>
             <div id="card" class="w-[21%] flex flex-col items-center py-[4vw] px-[1.5vw] bg-white ">
                 <img id="icon" src="assets/service3.png" class="absolute -top-[20%] bg-white rounded-full w-[8vw] p-[1vw] border-[#2A1768] border-[3px] h-[8vw] object-cover">
                 <h3 class="text-[1.6vw] text-center font-bold mb-[1vw]">Water Damage</h3>
-                <p class="mb-[1vw] text-center">Our plumbers are ready to go 24/7 for emergencies - including nights, weekends and holidays.</p>
+                <p class="mb-[1vw] text-center">Our teams are equipped with state-of-the-art water extraction and cleanup equipment.</p>
                 <h2 class="text-[#3F1273] text-[1.4vw] font-[Oswald] uppercase ">Explore this Service ></h2>
             </div>
             <div id="card" class="w-[21%] flex flex-col items-center py-[4vw] px-[1.5vw] bg-white ">
                 <img id="icon" src="assets/service4.png" class="absolute -top-[20%] bg-white rounded-full w-[8vw] p-[1vw] border-[#2A1768] border-[3px] h-[8vw] object-cover">
                 <h3 class="text-[1.6vw] text-center font-bold mb-[1vw]">Water Heaters</h3>
-                <p class="mb-[1vw] text-center">Our plumbers are ready to go 24/7 for emergencies - including nights, weekends and holidays.</p>
+                <p class="mb-[1vw] text-center">Trust Roto-Rooter for repair and replacement of gas, electric and tankless water heaters.</p>
                 <h2 class="text-[#3F1273] text-[1.4vw] font-[Oswald] uppercase ">Explore this Service ></h2>
             </div>
         </div>
